--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Le meilleure doodle jump</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    
+
 <html>
-    <head>
-        <title>Doodle Jump in JS</title>
-    </head>
+
     <body>
-        <script src="src/player.js"></script>
-        <script src="src/monsters.js"></script>
-        <script src="src/block.js"></script>
-        <script src="src/powerups.js"></script>
-        <script src="src/blockType.js"></script>
-        <script src="src/blockSpawner.js"></script>
+        <img src="Sprites/background.png" class="background">
+        <div id="character"></div>
         <script src="src/main.js"></script>
     </body>
+</html>
+</body>
 </html>
