coucou c'est commit

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <html>
 
     <body>
+        <h2>le meilleure doodle jump</h2>
         <img src="Sprites/background.png" class="background">
         <div id="character"></div>
         <script src="src/main.js"></script>
