--- a/index.html
+++ b/index.html
@@ -13,9 +13,20 @@
 <html>
 
     <body>
-        <h2>le meilleure doodle jump</h2>
-        <img src="Sprites/background.png" class="background">
-        <div id="character"></div>
+        <div class="container">
+            <div class="Titre">
+                <h2>le meilleure doodle jump</h2>
+
+            </div>
+            <div class="Info"></div>
+            <div class="Side"></div>
+            <div class="Score"></div>
+            <div class="Game">
+                <img src="Sprites/background.png" class="background">
+                
+                <img src="Sprites/rightPlayer.png" id="character">
+            </div>
+        </div>
         <script src="src/main.js"></script>
     </body>
 </html>
