--- a/index.html
+++ b/index.html
@@ -1,34 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Le meilleure doodle jump</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="Titre">
+        <h2>le meilleure doodle jump</h2>
+      </div>
+      <div id="Info"></div>
+      <div id="Side"></div>
+      <div id="Info"></div>
+      <div id="Game">
+        <img src="Sprites/background.png" class="background" />
 
-<html>
-
-    <body>
-        <div class="container">
-            <div class="Titre">
-                <h2>le meilleure doodle jump</h2>
-
-            </div>
-            <div class="Info"></div>
-            <div class="Side"></div>
-            <div class="Score"></div>
-            <div class="Game">
-                <img src="Sprites/background.png" class="background">
-                
-                <img src="Sprites/rightPlayer.png" id="character">
-            </div>
-        </div>
-        <script src="src/main.js"></script>
-    </body>
-</html>
-</body>
+        <img src="Sprites/rightPlayer.png" id="perso" style="top:500px;left: 500px;" />
+      </div>
+    </div>
+    <script src="main.js" defer></script>
+  </body>
 </html>
