added random block placement + jump (not working)

--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
       <div id="Game">
         <img src="Sprites/background.png" class="background" />
 
-        <img src="Sprites/rightPlayer.png" id="perso" style="top:500px;left: 500px;" />
+        <img src="Sprites/rightPlayer.png" id="perso" style="top:500px;left: 800px;" />
       </div>
     </div>
     <script src="main.js" defer></script>
+    <script src="block.js"></script>
   </body>
 </html>
