--- a/index.html
+++ b/index.html
@@ -1,27 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Le meilleure doodle jump</title>
-    <link rel="stylesheet" href="style.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/addons/p5.sound.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="utf-8" />
+
   </head>
   <body>
-    <div class="container">
-      <div class="Titre">
-        <h2>le meilleure doodle jump</h2>
-      </div>
-      <div id="Info"></div>
-      <div id="Side"></div>
-      <div id="Info"></div>
-      <div id="Game">
-        <img src="Sprites/background.png" class="background" />
-
-        <img src="Sprites/rightPlayer.png" id="perso" style="top:500px;left: 800px;" />
-      </div>
-    </div>
-    <script src="main.js" defer></script>
-    <script src="block.js"></script>
+    <script src="sketch.js"></script>
+    <script src="Doodler.js"></script>
+    <script src="Platform.js"></script>
   </body>
 </html>
