ajout image platforme

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
   </head>
   <body>
+    <body>
+      
+    </body>
     <script src="sketch.js"></script>
     <script src="Doodler.js"></script>
     <script src="Platform.js"></script>
