--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <body>
-      
+      <h1 class="title">DYdle Jump</h1>
     </body>
     <script src="sketch.js"></script>
     <script src="Doodler.js"></script>
